# markdown-help

./: .gitmodules  LICENSE  mdhelp.json  meson.build  mh.json  mh.proj.json  readme.md  requirements.txt
.github/: dependabot.yml
.github/workflows/: build.yml
cross/: linux-aarch64.txt  linux-arm.txt  linux-to-windows-mingw.txt  linux-x86.txt  windows-aarch64.txt  windows-arm.txt
src/: build.cpp  compile.cpp  generate.cpp  main.cpp  main.hpp  new_proj.cpp  new_proj.hpp  prepare.cpp  project.cpp  project.hpp
temp/: meson.build
